--- a/KGERP/Views/Configuration/UserActionLog.cshtml
+++ b/KGERP/Views/Configuration/UserActionLog.cshtml
@@ -77,6 +77,7 @@
                                                     <th>Employee Id</th>
                                                     <th>Employee Name</th>
                                                     <th>Action Name</th>
+                                                    <th>Action Timestamp</th>
                                                     <th>Action Details</th>
                                                 </tr>
                                             </thead>
@@ -109,6 +110,7 @@
                                                                         <span class="btn btn-secondary btn-xs">No-Action</span>
                                                                     }
                                                                 </td>
+                                                                <td>@item.ActionTimeStamp.ToLongTimeString()</td>
                                                                 <td>@item.Details</td>
                                                             </tr>
                                                         }
