--- a/KGERP/Views/Configuration/UserActionLog.cshtml
+++ b/KGERP/Views/Configuration/UserActionLog.cshtml
@@ -121,8 +121,7 @@
                                         </table>
                                     </div>
                                 </div>
-                                <div class="box-footer">
-                                </div>
+                                <div class="box-footer"></div>
                             </div>
                         </div>
                     </div>
